# fk_2505

./: .env.example  README.md
electronapp/: .gitignore  package-lock.json  package.json  requirements.txt  ws_test.py
electronapp/backend/: README.md  connection_test.py  firebase_setting.py  firebasemanager.py  main.py  pyproject.toml
electronapp/backend/manager/: firebasemanager.py
electronapp/electron/: tsconfig.json
electronapp/electron/src/: main.ts  preload.ts
electronapp/src/: App.css  App.tsx  app.py
electronapp/src/@types/: renderer.d.ts
electronapp/src/services/: api.ts  websocket.ts
